# proyecto_machine_learning_Fake_News

./: .gitignore  README.md  pyproject.toml  pyproject.toml.save
data/: fakenews.ipynb
env/: pyvenv.cfg
notebooks/: 0_EDA.ipynb  1_baseline.ipynb  2_modelo_clasicos_subject.ipynb  4_gridsearch copy 2.ipynb  5_BERT.ipynb  BERT.ipynb  EDA.ipynb  RandomSearch.ipynb  gridsearch copy 2.ipynb  gridsearch copy 3.ipynb  gridsearch copy.ipynb  gridsearch.ipynb  info.ipynb  modelo.RandomForest.ipynb  modelo_clasicos.ipynb  modelo_clasicos_sinsubject copy.ipynb  modelo_clasicos_sinsubject.ipynb  modelo_clasicos_subject.ipynb  modelo_clasicos_todas.ipynb  modelo_clasicos_todas_gridsearch.ipynb  modelo_xgboost copy 2.ipynb  modelo_xgboost copy.ipynb  modelonb.ipynb  modelonb_solotext copy.ipynb  modelos.ipynb  pipeline.ipynb  xgboost.ipynb
