[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Fake_News"
version = "0.1.0"
description = "Proyecto de Machine Learning"
requires-python = ">=3.11,<3.13" 
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.poetry.dependencies]
gitignore = "^0.0.8"
numpy = "^2.2.3"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scipy = "^1.15.2"
nltk = "^3.9.1"
wordcloud = "^1.9.4"
scikit-learn = "^1.6.1"
spacy = "^3.8.4"
xgboost = "^2.1.4"
